adding last sections

--- a/index.html
+++ b/index.html
@@ -96,19 +96,11 @@
                   class="shape-fill"
                   ></path>
             </svg>
-         </div>
-            <div class="hobbies" id="hobbies">
-                <div>
-                   <h1 class="titulocarta">Hobbies</h1>
-                </div>
-                <div class="hobbies_text" id="about" data-aos="fade-up" data-aos-duration="500">
-                    <p style="color: black;">
-                    In my free time, I like to focus on creative tasks. I have found a pleasant pastime in front-end design and app web development, <br>
-                    here I show you some of my work...
-                    </p>
-                </div>
-                <div class="tarjetas-container-hobbies" id="tarjetas-container-hobbies" data-aos="zoom-in-right" data-aos-duration="1000"></div>
-             </div>
+         </div> 
+         <div class="carta-light" id="carta-light">
+            <h1 class="titulocarta-ligth">Courses and workshops</h1>
+         <div class="tarjetas-container-projects" id="tarjetas-container-projects" data-aos="zoom-in-right" data-aos-duration="1000"></div>
+      </div>
          <div class="top-wave svg-invertido">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                <path
@@ -117,49 +109,29 @@
                   ></path>
                 </svg>
         </div>
-         <div class="contact" id="contact" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-            <h1>Contact me</h1>
-            <div class="contact-box" data-aos="zoom-in-right" data-aos-duration="500">
-               <div class="mapa">
-                  <div style="width: 100%;">
-                     <div style="width: 100%;">
-                        <iframe
-                           scrolling="no"
-                           marginheight="0"
-                           marginwidth="0"
-                           src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Carlos%20H.%20Perette%20750+(Anderson%C2%B4s%20Pizza)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-                           width="100%"
-                           height="600"
-                           frameborder="0"
-                           >
-                        <a href="https://www.maps.ie/distance-area-calculator.html">measure area map</a>
-                        </iframe>
-                     </div>
-                  </div>
-               </div>
-               <div class="right-side">
-                  <form id="form">
-                     <div class="info-required">
-                        <label for="name">Name *</label>
-                        <input type="text" name="name" id="name" placeholder="Enter your name" autocomplete="off" required pattern="[a-zA-Z]+" />
-                     </div>
-                     <div class="info-required">
-                        <label for="email">Email *</label>
-                        <input type="email" name="email" id="email" placeholder="Enter your email" autocomplete="on" required />
-                     </div>
-                     <div class="info-required">
-                        <label for="phone">Phone Number</label>
-                        <input type="text" name="phone" id="phone" placeholder="Enter your phone number" autocomplete="on" pattern="[0-9]+" minlength="8" maxlength="10" />
-                     </div>
-                     <div class="info-required">
-                        <label for="message">Message *</label>
-                        <textarea type="text" name="message" id="message" placeholder="Enter message" rows="5" cols="33"></textarea>
-                     </div>
-                     <button class="light-btn" type="submit" onclick="return sendEmail();">Enviar</button>
-                  </form>
-               </div>
-            </div>
-         </div>
+   <div class="carta" id="carta">
+         <h1 class="titulocarta">Congresses and conferences</h1>
+      <div class="tarjetas-container-projects" id="tarjetas-container-projects" data-aos="zoom-in-right" data-aos-duration="1000"></div>
+   </div>
+   <div class="top-wave">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+         <path
+            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+            class="shape-fill"
+            ></path>
+      </svg>
+   </div>
+   <div class="hobbies" id="hobbies">
+      <div>
+         <h1 class="titulocarta">Hobbies</h1>
+      </div>
+      <div class="hobbies_text" id="about" data-aos="fade-up" data-aos-duration="500">
+          <p style="color: black;">
+          Just for fun 😊...
+          </p>
+      </div>
+      <div class="tarjetas-container-hobbies" id="tarjetas-container-hobbies" data-aos="zoom-in-right" data-aos-duration="1000"></div>
+   </div>
       </main>
       <div class="top-wave svg-invertido">
          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -171,7 +143,7 @@
       </div>
       <footer>
          <h2>
-            <b>Anderson's pizza 2023 &copy; Desarrollado por el GRUPO 8 del curso Fullstack Phyton para el programa </b><img src="./assets/img/cac_logo.png" alt="cac_logo" /><br />
+            <b>&copy; Luciano Anselmino-2025<br />
             Licencia MIT
          </h2>
       </footer>
