--- a/index.html
+++ b/index.html
@@ -98,9 +98,17 @@
             </svg>
          </div> 
          <div class="carta-light" id="carta-light">
-            <h1 class="titulocarta-ligth">Courses and workshops</h1>
-         <div class="tarjetas-container-projects" id="tarjetas-container-projects" data-aos="zoom-in-right" data-aos-duration="1000"></div>
-      </div>
+            <h1 class="titulocarta-ligth">Courses</h1>
+            <div class="row justify-content-between">
+               <div class="col-md-5 container-curses_taken" data-aos="fade-right" data-aos-duration="1000">
+                  <p>Taken</b></p>
+                  <div id="tarjetas-container-coursetaken" class="tarjetas-container-coursetaken"></div>  
+               </div>
+               <div class="col-md-5 container-curses_taught" data-aos="fade-left" data-aos-duration="2000">
+                  <p>Taught</p>
+               </div>
+            </div>
+         </div>
          <div class="top-wave svg-invertido">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                <path
