flip cards details added

--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
          var particleCanvas = new ParticleNetwork(canvasDiv, options);
       </script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
       <script type="text/javascript">
          AOS.init();
       </script>
       <script src="./assets/js/events.js"></script>
+      <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
    </body>
 </html>
