--- a/project_1.html
+++ b/project_1.html
@@ -105,6 +105,6 @@
                   ></path>
             </svg>
 	</div>
-	<script src="./assets/js/showElements.js"></script>
+	<script src="./assets/js/projects.js"></script>
 </body>
 </html>
