--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                   <a href="#banner"><i class="fa-solid fa-house-chimney"></i>&nbsp;Start</a>
                   <a href="#about"><i class="fa-regular fa-user"></i>&nbsp;About me</a>
                   <a href="#carta"><i class="fa-solid fa-briefcase "></i>&nbsp;Works</a>
-                  <a href="#hobbies"><i class="fa-regular fa-address-card"></i>&nbsp;Hobbies</a>
+                  <a href="#carta-light"><i class="fa-regular fa-address-card"></i>&nbsp;Courses</a>
+                  <a href="#meetings"><i class="fa-solid fa-share-nodes"></i>&nbsp;Meetings and Congresses</a>
                </nav>
             </div>
          </header>
@@ -41,7 +42,7 @@
       <main>
          <div class="banner" id="banner">
             <div class="banner_pic card" data-aos="fade-right" data-aos-duration="1000">
-               <img src="./assets/img/mypic.jpg" alt="MyPic" />
+               <img src="./assets/img/mypic.png" alt="MyPic" />
                <div class="punto-luz"></div>
             </div>
             <div class="banner_tex" data-aos="fade-up" data-aos-duration="1000">
@@ -58,7 +59,7 @@
                   ></path>
             </svg>
          </div>
-         <div class="row about light-color" id="about" data-aos="fade-up" data-aos-duration="500">
+         <div class="row about light-color" id="about">
             <h1>About Me</h1>
             <div class="about_text col-md-7" data-aos="fade-up" data-aos-duration="500">
                <p>
@@ -66,14 +67,14 @@
                   During this time, I immersed myself in manipulating and analyzing extensive data tables, challenging the limitations of conventional tools. 
                   This challenge led me to explore the world of programming, learning languages such as R and Python, as well as relational database management and artificial intelligence techniques.<br>
                   <br>
-                  I have collaborated on data analysis for various scientific research projects, significantly contributing to the identification of key genes in disease treatment. 
+                  I have collaborated on data analysis for various scientific research projects, significantly contributing to the identification of key features in large data. 
                   I am currently also a professor in a program focused on data analysis with artificial intelligence.<br>
                   <br>
                   Throughout these experiences, I have come to understand that data analysis skills are cross-cutting across any industry. 
                   I have developed a deep interest in expanding my horizons to new topics and challenges.
                </p>
             </div>
-            <div class="col-md-5 about-me" data-aos="fade-up" data-aos-duration="900">
+            <div class="col-md-5 about-me" data-aos="fade-up" data-aos-duration="500">
             <div class="about_academic">
                <p>Academic training</p>
                <div id="tarjetas-container-titles" class="tarjetas-container-titles"></div>
@@ -89,7 +90,6 @@
                </svg>
             </div>
          <div class="carta" id="carta">
-            
                <h1 class="titulocarta">Works</h1>
             <div class="tarjetas-container-projects" id="tarjetas-container-projects" data-aos="zoom-in-right" data-aos-duration="1000"></div>
          </div>
@@ -122,8 +122,8 @@
                   ></path>
                 </svg>
         </div>
-        <div class="carta" id="carta">
-         <h1 class="titulocarta">Congresses and Conferences</h1>
+        <div class="meetings" id="meetings">
+         <h1 class="titulocarta">Meetings and Congresses</h1>
          <div class="tarjetas-container-conferences" id="tarjetas-container-conferences" data-aos="zoom-in-right" data-aos-duration="1000">
          </div>
      </div>
@@ -135,39 +135,16 @@
             ></path>
       </svg>
    </div>
-   <div class="hobbies" id="hobbies">
-      <div>
-         <h1 class="titulocarta">Hobbies</h1>
-      </div>
-      <div class="hobbies_text" id="about" data-aos="fade-up" data-aos-duration="500">
-          <p style="color: black;">
-          Just for fun 😊...
-          </p>
-      </div>
-      <div class="tarjetas-container-hobbies" id="tarjetas-container-hobbies" data-aos="zoom-in-right" data-aos-duration="1000"></div>
-   </div>
-      </main>
-      <div class="top-wave svg-invertido">
-         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-            <path
-               d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-               class="shape-fill"
-               ></path>
-         </svg>
-      </div>
       <footer>
-         <h2>
+         <h1>
             <b>&copy; Luciano Anselmino-2025<br />
-            Licencia MIT
-         </h2>
+               MIT License
+         </h1>
       </footer>
       <script src="./assets/js/showElements.js"></script>
       <script type="text/javascript" src="./assets/js/sendEmail.js"></script>
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script type="text/javascript">
-         var particleCanvas = new ParticleNetwork(canvasDiv, options);
-      </script>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@latest/swiper-bundle.min.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
