--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <link rel="icon" href="./assets/img/computer.ico" />
+      <link rel="icon" href="../assets/img/computer.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
       <link
@@ -17,9 +17,9 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
       <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-      <link rel="stylesheet" href="assets/css/index.css" />
-      <link rel="stylesheet" href="assets/css/waves.css" />
-      <link rel="stylesheet" href="assets/css/btns.css" />
+      <link rel="stylesheet" href="../assets/css/index.css" />
+      <link rel="stylesheet" href="../assets/css/waves.css" />
+      <link rel="stylesheet" href="../assets/css/btns.css" />
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@latest/swiper-bundle.min.css" />
@@ -29,12 +29,19 @@
       <div class="padre">
          <header class="header">
             <div class="menu margen-interno">
-               <nav class="nav">
+               <button class="menu-toggle" aria-label="Toggle Menu">
+               ☰
+               </button>
+                  <nav class="nav">
                   <a href="#banner"><i class="fa-solid fa-house-chimney"></i>&nbsp;Start</a>
                   <a href="#about"><i class="fa-regular fa-user"></i>&nbsp;About me</a>
-                  <a href="#carta"><i class="fa-solid fa-briefcase "></i>&nbsp;Works</a>
+                  <a href="#carta"><i class="fa-solid fa-briefcase"></i>&nbsp;Works</a>
                   <a href="#carta-light"><i class="fa-regular fa-address-card"></i>&nbsp;Courses</a>
-                  <a href="#meetings"><i class="fa-solid fa-share-nodes"></i>&nbsp;Meetings and Congresses</a>
+                  <a href="#meetings">
+                  <i class="fa-solid fa-share-nodes"></i>&nbsp;
+                  <span class="nav-full">Meetings and Congresses</span>
+                  <span class="nav-short">Congresses</span>
+                  </a>
                </nav>
             </div>
          </header>
@@ -47,31 +54,31 @@
             </div>
             <div class="banner_tex" data-aos="fade-up" data-aos-duration="1000">
                <h1> Hi! my name is</h1>
-               <h2>Luciano Anselmino</h2>
+               <h2>Luciano <br>Anselmino</h2>
                <h3>Data Scientist | Bioinformatician</h3>
             </div>
          </div>
-         <div class="top-wave">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-               <path
-                  d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                  class="shape-fill"
-                  ></path>
-            </svg>
-         </div>
+         <div class="wave-container"></div>
+         <svg class="svg-rotated" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+         <path d="M0,200 C360,-150 1080,450 1440,200 L1440,300 L0,300 Z" fill="black" />
+         </svg>
+         </div> 
          <div class="row about light-color" id="about">
             <h1>About Me</h1>
             <div class="about_text col-md-7" data-aos="fade-up" data-aos-duration="500">
                <p>
-                  My initial training was focused on the field of biology and health, where I began my career working in cancer genetics.
-                  During this time, I immersed myself in manipulating and analyzing extensive data tables, challenging the limitations of conventional tools. 
-                  This challenge led me to explore the world of programming, learning languages such as R and Python, as well as relational database management and artificial intelligence techniques.<br>
+                  I'm a bioinformatician with a background in biology and cancer research, and a strong passion
+                  for data. My career began in the lab, studying cancer genetics. But as I faced complex 
+                  datasets and limited tools, I naturally moved into programming—learning R, Python, SQL, and 
+                  AI techniques to uncover the stories behind the numbers.<br>
                   <br>
-                  I have collaborated on data analysis for various scientific research projects, significantly contributing to the identification of key features in large data. 
-                  I am currently also a professor in a program focused on data analysis with artificial intelligence.<br>
+                  Since then, I’ve worked on multiple scientific projects, helping identify biomarkers and 
+                  patterns in large-scale data. I also teach data science and AI, aiming to make complex 
+                  concepts accessible and useful.<br>
                   <br>
-                  Throughout these experiences, I have come to understand that data analysis skills are cross-cutting across any industry. 
-                  I have developed a deep interest in expanding my horizons to new topics and challenges.
+                  What drives me is curiosity about science, technology, and the impact of good data analysis 
+                  (beyond the lab). While my roots are in biomedicine, I’m open and eager to apply my skills in 
+                  other fields anywhere data can make a difference.
                </p>
             </div>
             <div class="col-md-5 about-me" data-aos="fade-up" data-aos-duration="500">
@@ -81,25 +88,19 @@
             </div>
             </div>
          </div>
-         <div class="top-wave svg-invertido">
-               <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                  <path
-                     d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                     class="shape-fill"
-                     ></path>
-               </svg>
-            </div>
+         <div class="wave-container"></div>
+         <svg class="svg-vertical" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+         <path d="M0,200 C360,-150 1080,450 1440,200 L1440,300 L0,300 Z" fill="black" />
+         </svg>
+         </div> 
          <div class="carta" id="carta">
                <h1 class="titulocarta">Works</h1>
             <div class="tarjetas-container-projects" id="tarjetas-container-projects" data-aos="zoom-in-right" data-aos-duration="1000"></div>
          </div>
-         <div class="top-wave">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-               <path
-                  d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                  class="shape-fill"
-                  ></path>
-            </svg>
+          <div class="wave-container"></div>
+         <svg class="svg-rotated" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+         <path d="M0,200 C360,-150 1080,450 1440,200 L1440,300 L0,300 Z" fill="black" />
+         </svg>
          </div> 
          <div class="carta-light" id="carta-light">
             <h1 class="titulocarta-ligth">Courses</h1>
@@ -114,27 +115,21 @@
                </div>
             </div>
          </div>
-         <div class="top-wave svg-invertido">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-               <path
-                  d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                  class="shape-fill"
-                  ></path>
-                </svg>
-        </div>
+         <div class="wave-container"></div>
+         <svg class="svg-vertical" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+         <path d="M0,200 C360,-150 1080,450 1440,200 L1440,300 L0,300 Z" fill="black" />
+         </svg>
+         </div> 
         <div class="meetings" id="meetings">
          <h1 class="titulocarta">Meetings and Congresses</h1>
          <div class="tarjetas-container-conferences" id="tarjetas-container-conferences" data-aos="zoom-in-right" data-aos-duration="1000">
          </div>
      </div>
-   <div class="top-wave">
-      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-         <path
-            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-            class="shape-fill"
-            ></path>
+     <div class="wave-container"></div>
+         <svg class="svg-rotated" viewBox="0 0 1440 300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none">
+         <path d="M0,200 C360,-150 1080,450 1440,200 L1440,300 L0,300 Z" fill="black" />
       </svg>
-   </div>
+      </div>
       <footer>
          <h1>
             <b>&copy; Luciano Anselmino-2025<br />
@@ -152,7 +147,7 @@
       <script type="text/javascript">
          AOS.init();
       </script>
-      <script src="./assets/js/events.js"></script>
+      <script src="./assets/js/events.js" defer></script>
       <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
    </body>
 </html>
